add form validation

--- a/contact.html
+++ b/contact.html
@@ -33,9 +33,9 @@
             </ul>
 
             <section class="burger-nav">
-                <div class="line1"></div>
-                <div class="line2"></div>
-                <div class="line3"></div>
+                <section class="line1"></section>
+                <section class="line2"></section>
+                <section class="line3"></section>
             </section>
         </nav>
     </header>
@@ -48,41 +48,41 @@
 
         <section class="form-container">
             <!-- Name input -->
-            <div class="form">
-                <input type="text" name="name" id="" required autocomplete="off">
-                <label for="name" class="input-label">
+            <section class="form">
+                <input type="text" name="name" id="" required autocomplete="off" data-id = "name">
+                <label for="name" class="input-label" data-id = "name">
                     <span class="content-label">Full Name</span>
                 </label>
-            </div>
+            </section>
 
             <!-- Email input  -->
-            <div class="form">
-                <input type="text" name="email" id="" required autocomplete="off">
-                <label for="email" class="input-label">
+            <section class="form">
+                <input type="text" name="email" id="" required autocomplete="off" data-id = "email">
+                <label for="email" class="input-label" data-id="email">
                     <span class="content-label">Email</span>
                 </label>
-            </div>
+            </section>
 
             <!-- Phone number input  -->
-            <div class="form">
-                <input type="text" name="phone" id="" required autocomplete="off">
-                <label for="phone" class="input-label">
+            <section class="form">
+                <input type="text" name="phone" id="" required autocomplete="off" data-id="phone">
+                <label for="phone" class="input-label" data-id = "phone">
                     <span class="content-label">Phone Number</span>
                 </label>
-            </div>
+            </section>
 
             <!-- Message input -->
-            <div class="form">
-                <input type="text" name="message" id="" required autocomplete="off">
-                <label for="message" class="input-label">
+            <section class="form">
+                <input type="text" name="message" id="" required autocomplete="off" data-id="message">
+                <label for="message" class="input-label" data-id = "message">
                     <span class="content-label">Your Message</span>
                 </label>
-            </div>
+            </section>
 
             <!-- Submit Button -->
-            <div class="submit-btn-container">
+            <section class="submit-btn-container">
                 <button class="submit-btn">Submit</button>
-            </div>
+            </section>
         </section>
 
         <article class="contact-us-label">
