change image url

--- a/explore.html
+++ b/explore.html
@@ -21,7 +21,7 @@
     <header class="header">
         <!-- header background image -->
         <div class="img-wrapper">
-            <img src="images/explore/japanese-woman.jpg" alt="japanese woman">
+            <img src="https://raw.githubusercontent.com/00009987/WT-CW1-Assets/main/images/explore/japanese-woman.jpg" alt="japanese woman">
         </div>
 
         <!-- navigation bar -->
@@ -70,7 +70,7 @@
                         Mt. Haguro, Mt. Gassan and Mt. Yudono, known collectively as the Dewa Sanzan. According to the
                         Shugendo ascetic faith that developed here, the pilgrimage through these
                         mountains is a journey through the present, past, and into the future.</p>
-                    <img src="images/explore/history-1.jpg" alt="Yamagata">
+                    <img src="https://raw.githubusercontent.com/00009987/WT-CW1-Assets/main/images/explore/history-1.jpg" alt="Yamagata">
                     <button class="read-btn" data-order="1">read</button>
                 </article>
 
@@ -80,7 +80,7 @@
                         alpine adventure. Widely considered Gifu's crown jewel, the mountain-ringed city of Takayama is
                         a fantastic destination in itself, but also an excellent base from which to explore the Japan
                         Alps and the surrounding Hida area.</p>
-                    <img src="images/explore/history-2.jpg" alt="Takayama">
+                    <img src="https://raw.githubusercontent.com/00009987/WT-CW1-Assets/main/images/explore/history-2.jpg" alt="Takayama">
                     <button class="read-btn" data-order="2">read</button>
                 </article>
 
@@ -93,7 +93,7 @@
                         history book, it is also a picturesque slice of rural Japan ideal for a day of cycling and
                         sightseeing.
                     </p>
-                    <img src="images/explore/history-3.jpg" alt="Asuka">
+                    <img src="https://raw.githubusercontent.com/00009987/WT-CW1-Assets/main/images/explore/history-3.jpg" alt="Asuka">
                     <button class="read-btn" data-order="3">read</button>
                 </article>
             </section>
@@ -112,7 +112,7 @@
                         Digital art pioneers teamLab are a collective of engineers, UI designers, math phenoms, and
                         artists. The interdisciplinary group has hosted extraordinary exhibitions around the world for
                         several years.</p>
-                    <img src="images/explore/art-1.jpg" alt="Yamagata">
+                    <img src="https://raw.githubusercontent.com/00009987/WT-CW1-Assets/main/images/explore/art-1.jpg" alt="teamLab">
                     <button class="read-btn" data-order="1">read</button>
                 </article>
 
@@ -122,7 +122,7 @@
                         Iwatsuki is a small district of Saitama City that's nicknamed the "City of Dolls." Iwatsuki
                         began making dolls in the 17th century, and the figures made here, from cute little girl dolls
                         to fierce warriors, were used in festivals all over Japan.</p>
-                    <img src="images/explore/art-2.jpg" alt="Takayama">
+                    <img src="https://raw.githubusercontent.com/00009987/WT-CW1-Assets/main/images/explore/art-2.jpg" alt="City of Dolls">
                     <button class="read-btn" data-order="2">read</button>
                 </article>
 
@@ -134,7 +134,7 @@
                         dance-theater unlike anything you have seen before. The art has been thrilling local people for
                         decades and is now regularly performed at the famous Gion Festival in Kyoto.
                     </p>
-                    <img src="images/explore/art-3.jpg" alt="Asuka">
+                    <img src="https://raw.githubusercontent.com/00009987/WT-CW1-Assets/main/images/explore/art-3.jpg" alt="Iwami Kagura ">
                     <button class="read-btn" data-order="3">read</button>
                 </article>
             </section>
@@ -152,9 +152,8 @@
                     <p class="content">A castle in the mist with cherry blossoms and a ghost
                         Maruoka Castle in Fukui Prefecture has the oldest existing wooden keep in the country.
                         Kasumigajo, the alternative name for Maruoka Castle, means "castle in the mist," a reference to
-                        the area's misty weather. Kasumigajo Park was established around the base of the castle to
-                        commemorate its 400th anniversary.</p>
-                    <img src="images/explore/nature-1.jpg" alt="Yamagata">
+                        the area's misty weather.</p>
+                    <img src="https://raw.githubusercontent.com/00009987/WT-CW1-Assets/main/images/explore/nature-1.jpg" alt="Maruoka Castle in Fukui">
                     <button class="read-btn" data-order="1">read</button>
                 </article>
 
@@ -164,7 +163,7 @@
                         welcome you. From its source in an evergreen primeval forest and with an awe-inspiring 133 meter
                         drop, Nachi Falls is Japan's largest vertical drop waterfall. Much more than a simple scene of
                         natural beauty, the falls are worshipped as the home of a Shinto deity.</p>
-                    <img src="images/explore/nature-2.jpg" alt="Takayama">
+                    <img src="https://raw.githubusercontent.com/00009987/WT-CW1-Assets/main/images/explore/nature-2.jpg" alt=" Nachi Falls">
                     <button class="read-btn" data-order="2">read</button>
                 </article>
 
@@ -177,7 +176,7 @@
                         which only appears twice a day during low tide. Once the sandbar appears it forms a golden path
                         to a series of small islets.
                     </p>
-                    <img src="images/explore/nature-3.jpg" alt="Asuka">
+                    <img src="https://raw.githubusercontent.com/00009987/WT-CW1-Assets/main/images/explore/nature-3.jpg" alt="Angel Road">
                     <button class="read-btn" data-order="3">read</button>
                 </article>
             </section>
@@ -185,14 +184,14 @@
     </main>
 
     <!-- footer content -->
-    <footer class="footer-off"> 
+    <footer class="footer-off">
         <section class="social-media">
             <div class="social-media-icons">
-                <a href="htttps://twitter.com"><img src="images/svg/twitter.svg" alt="Twitter" class="svg twitter"></a>
-                <a href="htttps://instagram.com"><img src="images/svg/instagram.svg" alt="Instagram"
-                        class="svg instagram"></a>
-                <a href="https://github.com/00009987/WT-CW1"><img src="images/svg/github.svg" alt="Github"
-                        class="svg github"></a>
+                <a href="htttps://twitter.com"><img src="https://raw.githubusercontent.com/00009987/WT-CW1-Assets/a70f42214dae911509bfb322aa64e16b5636ee68/images/svg/twitter.svg" alt="Twitter" class="svg"></a>
+                <a href="htttps://instagram.com"><img src="https://raw.githubusercontent.com/00009987/WT-CW1-Assets/a70f42214dae911509bfb322aa64e16b5636ee68/images/svg/instagram.svg" alt="Instagram"
+                        class="svg"></a>
+                <a href="https://github.com/00009987/WT-CW1"><img src="https://raw.githubusercontent.com/00009987/WT-CW1-Assets/a70f42214dae911509bfb322aa64e16b5636ee68/images/svg/github.svg" alt="Github"
+                        class="svg"></a>
             </div>
         </section>
 
