--- a/news.html
+++ b/news.html
@@ -52,7 +52,7 @@
             <!-- single news -->
             <article class="center-container">
                 <section class="center-img-wrapper">
-                    <img src="images/news/news1.jpg" alt="">
+                    <img src="https://raw.githubusercontent.com/00009987/WT-CW1-Assets/main/images/news/news1.jpg" alt="Nagoya">
                 </section>
 
                 <section class="center-content-container">
@@ -68,7 +68,7 @@
             <!-- single news -->
             <article class="center-container border">
                 <section class="center-img-wrapper">
-                    <img src="images/news/news2.jpg" alt="">
+                    <img src="https://raw.githubusercontent.com/00009987/WT-CW1-Assets/main/images/news/news2.jpg" alt="Kyoto">
                 </section>
 
                 <section class="center-content-container">
@@ -84,7 +84,7 @@
             <!-- single news -->
             <article class="center-container border">
                 <section class="center-img-wrapper">
-                    <img src="images/news/news3.jpg" alt="">
+                    <img src="https://raw.githubusercontent.com/00009987/WT-CW1-Assets/main/images/news/news3.jpg" alt="Rail Pass">
                 </section>
 
                 <section class="center-content-container">
@@ -101,7 +101,7 @@
             <!-- single news -->
             <article class="center-container border">
                 <section class="center-img-wrapper">
-                    <img src="images/news/news4.jpg" alt="">
+                    <img src="https://raw.githubusercontent.com/00009987/WT-CW1-Assets/main/images/news/news4.jpg" alt="Osaka">
                 </section>
 
                 <section class="center-content-container">
@@ -124,7 +124,7 @@
                 <h3>A Stroll Through Gyoda</h3>
 
                 <section class="right-img-wrapper">
-                    <img src="images/news/article1.jpg" alt="">
+                    <img src="https://raw.githubusercontent.com/00009987/WT-CW1-Assets/main/images/news/article1.jpg" alt="Gyoda">
                 </section>
 
                 <a href="https://www.japan-guide.com/blog/a-stroll-through/200819.html" target="_blank"><button>Full
@@ -136,7 +136,7 @@
                 <h3>Say “Japan” With Flowers</h3>
 
                 <section class="right-img-wrapper">
-                    <img src="images/news/article2.png" alt="">
+                    <img src="https://raw.githubusercontent.com/00009987/WT-CW1-Assets/main/images/news/article2.png" alt="Flower park">
                 </section>
 
                 <a href="https://www.japan.travel/en/blog/travelling-without-moving-say-japan-with-flowers/" target="_blank"><button>Full Article</button></a>
@@ -147,7 +147,7 @@
                 <h3>New Year Celebrations in Japan</h3>
 
                 <section class="right-img-wrapper">
-                    <img src="images/news/article3.webp" alt="">
+                    <img src="https://raw.githubusercontent.com/00009987/WT-CW1-Assets/main/images/news/article3.webp" alt="Local food">
                 </section>
 
                 <a href="https://www.japan.travel/en/blog/new-year-celebrations-in-japan/" target="_blank"><button>Full Article</button></a>
@@ -156,14 +156,14 @@
     </main>
 
      <!-- footer content -->
-     <footer>
+    <footer>
         <section class="social-media">
             <div class="social-media-icons">
-                <a href="htttps://twitter.com"><img src="images/svg/twitter.svg" alt="Twitter" class="svg twitter"></a>
-                <a href="htttps://instagram.com"><img src="images/svg/instagram.svg" alt="Instagram"
-                        class="svg instagram"></a>
-                <a href="https://github.com/00009987/WT-CW1"><img src="images/svg/github.svg" alt="Github"
-                        class="svg github"></a>
+                <a href="htttps://twitter.com"><img src="https://raw.githubusercontent.com/00009987/WT-CW1-Assets/a70f42214dae911509bfb322aa64e16b5636ee68/images/svg/twitter.svg" alt="Twitter" class="svg"></a>
+                <a href="htttps://instagram.com"><img src="https://raw.githubusercontent.com/00009987/WT-CW1-Assets/a70f42214dae911509bfb322aa64e16b5636ee68/images/svg/instagram.svg" alt="Instagram"
+                        class="svg"></a>
+                <a href="https://github.com/00009987/WT-CW1"><img src="https://raw.githubusercontent.com/00009987/WT-CW1-Assets/a70f42214dae911509bfb322aa64e16b5636ee68/images/svg/github.svg" alt="Github"
+                        class="svg"></a>
             </div>
         </section>
 
@@ -174,7 +174,6 @@
                 represent an actual company or service</p>
         </article>
     </footer>
-
     <script src="script/app.js"></script>    
 </body>
 
