--- a/plan-your-trip.html
+++ b/plan-your-trip.html
@@ -21,8 +21,8 @@
     <header class="header">
         <!-- header background image -->
         <div class="img-wrapper">
-            <img src="images/plan-your-trip/map.jpg" alt="mountain-view">
-        </div>
+            <img src="https://raw.githubusercontent.com/00009987/WT-CW1-Assets/main/images/plan-your-trip/map.jpg" alt="<Map, camera, phone, watch, pen>">
+        </div>/
 
         <!-- navigation bar -->
         <nav class="nav">
@@ -336,15 +336,15 @@
         </section>
     </main>
 
-     <!-- footer content -->
-     <footer>
+    <!-- footer content -->
+    <footer>
         <section class="social-media">
             <div class="social-media-icons">
-                <a href="htttps://twitter.com"><img src="images/svg/twitter.svg" alt="Twitter" class="svg twitter"></a>
-                <a href="htttps://instagram.com"><img src="images/svg/instagram.svg" alt="Instagram"
-                        class="svg instagram"></a>
-                <a href="https://github.com/00009987/WT-CW1"><img src="images/svg/github.svg" alt="Github"
-                        class="svg github"></a>
+                <a href="htttps://twitter.com"><img src="https://raw.githubusercontent.com/00009987/WT-CW1-Assets/a70f42214dae911509bfb322aa64e16b5636ee68/images/svg/twitter.svg" alt="Twitter" class="svg"></a>
+                <a href="htttps://instagram.com"><img src="https://raw.githubusercontent.com/00009987/WT-CW1-Assets/a70f42214dae911509bfb322aa64e16b5636ee68/images/svg/instagram.svg" alt="Instagram"
+                        class="svg"></a>
+                <a href="https://github.com/00009987/WT-CW1"><img src="https://raw.githubusercontent.com/00009987/WT-CW1-Assets/a70f42214dae911509bfb322aa64e16b5636ee68/images/svg/github.svg" alt="Github"
+                        class="svg"></a>
             </div>
         </section>
 
@@ -355,6 +355,7 @@
                 represent an actual company or service</p>
         </article>
     </footer>
+
     
     <script src="script/app.js"></script>    
 </body>
