--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <header class="header">
         <!-- header background image -->
         <div class="img-wrapper">
-            <img src="images/home/mountain-view.jpg" alt="mountain-view">
+            <img src="https://raw.githubusercontent.com/00009987/WT-CW1-Assets/main/images/home/mountain-view.jpg" alt="mountain-view">
         </div>
 
         <!-- navigation bar -->
@@ -68,12 +68,12 @@
                         seasonal flowers through street-side waterways to enormous working waterwheels, photo
                         opportunities abound. </p>
                 </div>
-                <img src="images/home/magome.jpg" alt="Magome" class="popular-place-img">
+                <img src="https://raw.githubusercontent.com/00009987/WT-CW1-Assets/main/images/home/magome.jpg" alt="Magome" class="popular-place-img">
             </article>
 
             <!-- second article -->
             <article class="place-article order-change kingdom">
-                <img src="images/home/kingdom-of-lights.jpg" alt="Magome" class="popular-place-img">
+                <img src="https://github.com/00009987/WT-CW1-Assets/blob/main/images/home/kingdom-of-lights.jpg?raw=true" alt="Magome" class="popular-place-img">
                 <div class="place-content">
                     <h3 class="content-para">Kingdom of Lights</h3>
                     <p class="content-para">Sitting just across from Omura Bay, Huis Ten Bosch in Nagasaki is one of
@@ -94,7 +94,7 @@
                         rock formation of the cliffs as the waves dash against them.
                     </p>
                 </div>
-                <img src="images/home/motonosumi-jinja.jpg" alt="Magome" class="popular-place-img">
+                <img src="https://raw.githubusercontent.com/00009987/WT-CW1-Assets/main/images/home/motonosumi-jinja.jpg" alt="Magome" class="popular-place-img">
             </article>
         </section>
 
@@ -109,7 +109,7 @@
                         great time, experiencing full country life, and also taking amazing photos are guaranteed.
                         We have set up our agency so we can be personally involved with every single tour you take and
                         assure your safety and comfort during the whole travel.</p>
-                </article>            
+                </article>
 
                 <article class="about">
                     <p class="about-question">Want to experience how it feels to be in Japan? Answer is ready:</p>
@@ -124,11 +124,11 @@
     <footer>
         <section class="social-media">
             <div class="social-media-icons">
-                <a href="htttps://twitter.com"><img src="images/svg/twitter.svg" alt="Twitter" class="svg twitter"></a>
-                <a href="htttps://instagram.com"><img src="images/svg/instagram.svg" alt="Instagram"
-                        class="svg instagram"></a>
-                <a href="https://github.com/00009987/WT-CW1"><img src="images/svg/github.svg" alt="Github"
-                        class="svg github"></a>
+                <a href="htttps://twitter.com"><img src="https://raw.githubusercontent.com/00009987/WT-CW1-Assets/a70f42214dae911509bfb322aa64e16b5636ee68/images/svg/twitter.svg" alt="Twitter" class="svg"></a>
+                <a href="htttps://instagram.com"><img src="https://raw.githubusercontent.com/00009987/WT-CW1-Assets/a70f42214dae911509bfb322aa64e16b5636ee68/images/svg/instagram.svg" alt="Instagram"
+                        class="svg"></a>
+                <a href="https://github.com/00009987/WT-CW1"><img src="https://raw.githubusercontent.com/00009987/WT-CW1-Assets/a70f42214dae911509bfb322aa64e16b5636ee68/images/svg/github.svg" alt="Github"
+                        class="svg"></a>
             </div>
         </section>
 
@@ -139,8 +139,7 @@
                 represent an actual company or service</p>
         </article>
     </footer>
-
-    <script src="script/app.js"></script>       
+    <script src="script/app.js"></script>
 </body>
 
 </html>
