--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
             <!--  -->
             <p>This website was created by <a href="https://github.com/00009987/WT-CW1" target="_blank">00009987</a> to
                 fulfill Web Technology module’s requirements and does not
-                represent an actual company or service</p>
+                represent an actual company or service. <p><a href="https://github.com/00009987/WT-CW1/tree/main/report">Read website's report.</a></p></p>
         </article>
     </footer>
     <script src="script/app.js"></script>
